removing sensitive data

--- a/config/google_credentials_sample.yml
+++ b/config/google_credentials_sample.yml
@@ -1,5 +1,5 @@
 ---
 calendar_id: #copie do seu calendar
-client_id: ***REMOVED***
-client_secret: ***REMOVED***
+client_id: #id do app
+client_secret: #secret do app
 refresh_token: #nao precisa preencher
