--- a/config/credentials_sample.yml
+++ b/config/credentials_sample.yml
@@ -1,3 +1,3 @@
-endpoint: "***REMOVED***"
-user: "***REMOVED***"
+endpoint: "https://mail-br-homeoffice.br.wal-mart.com/EWS/exchange.asmx"
+user: "br\\tganzar"
 password: "xxxxxx"
