--- a/goodies/mongodb.plist
+++ b/goodies/mongodb.plist
@@ -7,12 +7,16 @@
   <string>mongodb</string>
   <key>ProgramArguments</key>
   <array>
-    <string>/usr/local/mongodb/3.0.4/bin/mongod</string>
+    <string>bash</string>
+    <string>-c</string>
+    <string>ulimit -n 2048; /usr/local/mongodb/3.0.4/bin/mongod</string>
   </array>
   <key>RunAtLoad</key>
   <true/>
   <key>KeepAlive</key>
   <true/>
+  <key>UserName</key>
+  <string>FILL_WITH_YOUR_USER</string>
   <key>WorkingDirectory</key>
   <string>/usr/local/mongodb</string>
   <key>StandardErrorPath</key>
